--- a/client/src/styles/globals.sass
+++ b/client/src/styles/globals.sass
@@ -64,6 +64,7 @@ button:hover
   padding: 0.5em
   border-radius: 10px
   outline: none
+  margin-bottom: 1rem
 
 .name-input:focus
   border: #64baed solid
